--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
 
     <canvas id="gameCanvas"></canvas>
 
-    <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="musicYT.js"></script>
-    <script src="musicLocal.js"></script>
     <script src="map.js"></script>
-    <script src="car.js"></script>
-    <script src="camera.js"></script>
-    <script src="ui.js"></script>
-    <script src="game.js"></script>
+<script src="worldObjects.js"></script> 
+<script src="particles.js"></script>    
+<script src="car.js"></script>
+<script src="camera.js"></script>
+<script src="ui.js"></script>
+<script src="musicYT.js"></script>
+<script src="musicLocal.js"></script>
+<script src="game.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js');
